# llm-council

./: .dockerignore  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  README.md  pyproject.toml
backend/: config.py  council.py  db.py  files.py  main.py  providers.py  schema.sql  storage.py  templates.py
backend/connectors/: __init__.py  builtin.py  oauth.py  registry.py
backend/tools/: __init__.py  builtin.py  registry.py
frontend/: package-lock.json  package.json  playwright.config.js
frontend/e2e/: council-ui.spec.js
frontend/src/: App.jsx  api.js
frontend/src/components/: ChatInterface.css  ChatInterface.jsx  ConnectorPanel.css  ConnectorPanel.jsx  CostSummary.css  CostSummary.jsx  FileUpload.css  FileUpload.jsx  ModelSelector.css  ModelSelector.jsx  PromptingTips.css  PromptingTips.jsx  Stage1.css  Stage1.jsx  Stage2.jsx  Stage4.css  Stage4.jsx  TemplateSelector.css  TemplateSelector.jsx  ToolSelector.css  ToolSelector.jsx
